--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin-todo-ticket",
+  "name": "eslint-plugin-todo-comment",
   "version": "0.0.1",
   "description": "This is a rule to encourage the entry of ticket URLs with TODO comments.",
   "main": "dist/index.js",
@@ -21,6 +21,7 @@
   },
   "packageManager": "yarn@1.22.19",
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "@typescript-eslint/parser": "^5.59.11",
     "@typescript-eslint/utils": "^5.59.11",
     "eslint": "^8.42.0",
