--- a/.github/workflows/shipjs-trigger.yml
+++ b/.github/workflows/shipjs-trigger.yml
@@ -27,6 +27,6 @@ jobs:
           git config --global user.name "github-actions[bot]"
       - run: npx shipjs trigger
         env:
-          SHIPJS_GITHUB_TOKEN: ${{ secrets.SHIPJS_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
           SLACK_INCOMING_HOOK: ${{ secrets.SLACK_INCOMING_HOOK }}
