--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "eslint-plugin-todo-comment",
-  "version": "1.1.0",
-  "description": "",
-  "main": "dist/index.js",
-  "types": "./src/index.ts",
+  "name": "@toyb0x/eslint-plugins",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "build": "tsup src/index.ts",
-    "test": "yarn vitest",
-    "typecheck": "tsc --noEmit"
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "typecheck": "turbo run typecheck"
   },
   "author": "ToyB0x",
   "license": "MIT",
@@ -25,15 +23,6 @@
   ],
   "packageManager": "yarn@1.22.21",
   "devDependencies": {
-    "@types/node": "20.11.20",
-    "@typescript-eslint/eslint-plugin": "7.0.2",
-    "@typescript-eslint/parser": "7.0.2",
-    "@typescript-eslint/rule-tester": "7.0.2",
-    "eslint": "8.57.0",
-    "prettier": "3.2.5",
-    "tsup": "8.0.2",
-    "turbo": "1.12.4",
-    "typescript": "5.3.3",
-    "vitest": "1.3.1"
+    "turbo": "1.12.4"
   }
 }
