--- a/package.json
+++ b/package.json
@@ -1,34 +1,28 @@
 {
-  "name": "eslint-plugin-todo-comment",
-  "version": "1.1.0",
-  "description": "This is a rule to encourage the entry of ticket URLs with TODO comments.",
-  "main": "dist/index.js",
-  "types": "./src/index.ts",
+  "name": "@toyb0x/eslint-plugins",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "build": "tsup src/index.ts",
-    "test": "yarn vitest",
-    "typecheck": "tsc --noEmit"
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "typecheck": "turbo run typecheck"
   },
   "author": "ToyB0x",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ToyB0x/eslint-plugin-todo-ticket/issues"
+    "url": "https://github.com/ToyB0x/eslint-plugins/issues"
   },
-  "homepage": "https://github.com/ToyB0x/eslint-plugin-todo-ticket",
+  "homepage": "https://github.com/ToyB0x/eslint-plugins",
   "volta": {
     "node": "20.11.1",
     "yarn": "1.22.21"
   },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "packageManager": "yarn@1.22.21",
   "devDependencies": {
-    "@types/node": "20.11.20",
-    "@typescript-eslint/eslint-plugin": "7.0.2",
-    "@typescript-eslint/parser": "7.0.2",
-    "@typescript-eslint/rule-tester": "7.0.2",
-    "eslint": "8.57.0",
-    "prettier": "3.2.5",
-    "tsup": "8.0.2",
-    "typescript": "5.3.3",
-    "vitest": "1.3.1"
+    "turbo": "1.12.4"
   }
 }
