--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "turbo run build",
     "test": "turbo run test",
-    "typecheck": "turbo run typecheck"
+    "typecheck": "turbo run typecheck",
+    "changelog:add": "changeset",
+    "changelog:generate": "changeset version"
   },
   "author": "ToyB0x",
   "license": "MIT",
@@ -24,5 +26,8 @@
   "packageManager": "yarn@1.22.21",
   "devDependencies": {
     "turbo": "1.12.4"
+  },
+  "dependencies": {
+    "@changesets/cli": "2.27.1"
   }
 }
