--- a/packages/ticket-url/package.json
+++ b/packages/ticket-url/package.json
@@ -1,9 +1,12 @@
 {
   "name": "eslint-plugin-todo-comment",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "This is a rule to encourage the entry of ticket URLs with TODO comments.",
   "main": "dist/index.js",
   "types": "./src/index.ts",
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
     "build": "tsup src/index.ts",
     "test": "yarn vitest",
