--- a/packages/use-inner-func/package.json
+++ b/packages/use-inner-func/package.json
@@ -21,6 +21,9 @@
   "volta": {
     "extends": "../../package.json"
   },
+  "dependencies": {
+    "@typescript-eslint/utils": "7.0.2"
+  },
   "devDependencies": {
     "@types/node": "20.11.20",
     "@typescript-eslint/eslint-plugin": "7.0.2",
